完成了搜索歌单与推荐的功能

--- a/app.json
+++ b/app.json
@@ -3,7 +3,10 @@
     "pages/index/index",
     "pages/find/find",
     "pages/my/my",
-    "pages/albums/albums"
+    "pages/albums/albums",
+    "pages/playlist/playlist",
+    "pages/play/play",
+    "pages/recommend/recommend"
   ],
   "window":{
     "backgroundColor": "#F6F6F6",
