--- a/project.config.json
+++ b/project.config.json
@@ -67,6 +67,13 @@
 					"pathName": "pages/albums/albums",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/playlist/playlist",
+					"pathName": "pages/playlist/playlist",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
